    and dictionaries)
  - consistency over datatype IDs: switched CDateTime and CBool,
    to make it consistent with class datatype.
  - fixed CAssocArray export and import:
    - CWideString is converted to UTF-8 and not system encoding
    - CDateTime is exported correctly
    - added unittests
    - Datatype CArray from ppl7::AssocArray::exportBinary can be
      imported
  
Version 6.4.21 vom 29.07.2018	(Repo-Tag: REL_6_4_21)
  - IdentAudioFile unterstützt nun Wave-Dateien
  - CTCPSocket::SSL_Stop: Return-Wert von SSL_shutdown wird jetzt
    korrekt interpretiert. Es wird kein shutdown mehr auf den Socket
    gemacht, da dies bei einer Abgebrochenden Verbindung zu einer
    Blockade führen kann.
  - CCurl: Neue Methode "getCurlHandle" liefert das interne Handle
    der libcurl zurück
  - CSSL: Unterstützung für TLS 1.1, TLS 1.2 und DTLS 1, sowie
    der Komfortmethode "TLS", die alle TLS-Versionen unterstützt,
    aber kein SSLv2 oder SSLv3.
  - Memory-Leak in MkDate behoben
  - Memory-Leak in CDateTime::get behoben
  - Memory-Leak in FileExists behoben
  - Bugfix im configure: SQLITE_LIBS und SQLITE_CFLAGS werden nur gesetzt,
    wenn sqlite auch gefunden wurde
  - NASM-Erkennung unter MSYS 2.0 i686 gefixt
  - Fixed: Deadlock in CThreadPool::Stop behoben
  - LPSTR wird nicht mehr verwendet

Version 6.4.20 vom 13.07.2014	(SVN-Tag: REL_6_4_20)
  - Funktion GetGlobalEncoding hinzugefügt
  - CID3Tag beachtet nun die globale Einstellung für die Kodierung
    der Strings
  - CID3Tag speichert Text-Tags nun grundsätzlich in UTF-16LE
  - Neue Funktionen: XmlEscape und XMLUnEscape
  - Neue Klasse: PythonHelper
  - Address-Parameter der HexDump-Funktionen ist nun als "const void *"
    deklariert
  - CID3Tag: Fehler beim Schreiben von Tags in AIFF-Files behoben
  - Überflüssige .svn-Ordner aus der Distribution entfernt
  - Unterstützung von AudioCD-s und CDDB mittels der neuen Klassen
    AudioCD und CDDB
  - Configure-Erkennung für nasm, png und jpeg verbessert
